// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme mount basic 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0"
  >
    hello
  </div>
</Greeting>
`;

exports[`enzyme mount empty styled 1`] = `
<Greeting>
  <div
    className="emotion-0 emotion-1"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount nested 1`] = `
.emotion-0 {
  background-color: red;
}

<div>
  <Greeting>
    <div
      className="emotion-0"
    >
      hello
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount nested styled 1`] = `
.emotion-0 {
  background-color: red;
}

<div>
  <Greeting>
    <div
      className="emotion-0 emotion-1"
    >
      Hello
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount styled 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0 emotion-1"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount theming 1`] = `
.emotion-0 {
  color: red;
  border: 2px solid red;
}

<div>
  <Button
    theme={
      Object {
        "main": "red",
      }
    }
  >
    <button
      className="emotion-0 emotion-1"
    >
      Normal
    </button>
  </Button>
  <ThemeProvider
    theme={
      Object {
        "main": "blue",
      }
    }
  >
    <Button
      theme={
        Object {
          "main": "red",
        }
      }
    >
      <button
        className="emotion-0 emotion-1"
      >
        Themed
      </button>
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme mount with array of styles as css prop 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div
  className="emotion-0"
>
  Test content
</div>
`;

exports[`enzyme mount with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing css element not at the top level 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    <div>
      <p
        className="emotion-0"
        id="something"
      >
        Hello
      </p>
       
      World!
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount with prop containing css element with other label 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <Thing
    content={
      <div
        css="unknown styles"
      />
    }
  >
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </Thing>
</Greeting>
`;

exports[`enzyme mount with prop containing css element with other props 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing regular element 1`] = `
<Test
  element={
    <button>
      Foo
    </button>
  }
>
  <button>
    Foo
  </button>
</Test>
`;

exports[`enzyme mount with styles on top level 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting
  className="emotion-0"
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme parent and child using css property 1`] = `
.emotion-0 {
  background-color: black;
}

.emotion-1 {
  color: white;
}

<div
  className="emotion-0"
>
  Test content
  <div
    className="emotion-1"
  />
</div>
`;

exports[`enzyme shallow basic 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0"
>
  hello
</div>
`;

exports[`enzyme shallow empty styled 1`] = `
<div
  className="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`enzyme shallow nested 1`] = `
<div>
  <Greeting>
    hello
  </Greeting>
</div>
`;

exports[`enzyme shallow nested styled 1`] = `
<div>
  <Greeting>
    Hello
  </Greeting>
</div>
`;

exports[`enzyme shallow styled 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`enzyme shallow theming 1`] = `
<div>
  <Button
    theme={
      Object {
        "main": "red",
      }
    }
  >
    Normal
  </Button>
  <ThemeProvider
    theme={
      Object {
        "main": "blue",
      }
    }
  >
    <Button
      theme={
        Object {
          "main": "red",
        }
      }
    >
      Themed
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme shallow with array of styles as css prop 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div
  className="emotion-0"
>
  Test content
</div>
`;

exports[`enzyme shallow with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <p
    className="emotion-0"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme shallow with prop containing css element with other label 1`] = `
.emotion-0 {
  background-color: blue;
}

<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  <p
    className="emotion-0"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme shallow with prop containing css element with other props 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <p
    className="emotion-0"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing regular element 1`] = `
<button>
  Foo
</button>
`;

exports[`enzyme shallow with styles on top level 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting
  className="emotion-0"
>
  Hello
</Greeting>
`;

exports[`enzyme with prop containing css element in fragment 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  x
  <div
    className="emotion-0"
  >
    y
  </div>
</div>
`;
